--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,69 @@
-body {
-    background-color: beige;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-h1 {
-    color: cornflowerblue;
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+body{
+    font-size: 100%;
+    font-family: sans-serif;
 }
 
-h2 {
-    color: black;
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding-top: 100px;
+div, section, span, ul, li, a{
+    box-sizing: border-box;
 }
 
-h3 {
-    color: cornflowerblue;
-    font-size: 25;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-style: normal;
-    text-align: center;
+header{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 50px;
+    align-items: right;
+    position: fixed;
 }
 
-p {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20;
-    text-align: center;
+#nav li{
+    list-style: none;
+    display: inline-block;
+    margin: 20px;
 }
 
-nav {
-    display:block;
-    padding: 20px;
-    padding-block: 8px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+#nav li a{
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+section{
+    width: 100%;
+    height: 100vh;
+}
+
+#home{
+    background-color: #bc6c29;
+}
+
+#about{
+    background-color: #9ab5dc;
+}
+
+#projects{
+    background-color: #29505b;
+}
+
+h1{
+    position: relative;
+    left: 30%;
+    top: 30%;
+    color: #fff;
+}
+
+h3{
+    position: relative;
+    top: 30%;
+    padding: 50px 250px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 550;
+    line-height: 20px;
+    font-family: sans-serif;
 }
