--- a/css/style.css
+++ b/css/style.css
@@ -4,116 +4,201 @@
 }
 
 body{
-    font-size: 100%;
+    font-size: 90%;
+    color: white;
     font-family: sans-serif;
 }
 
-div, section, span, ul, li, a{
-    box-sizing: border-box;
+a{
+    color: white;
 }
 
-header{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 50px;
-    align-items: right;
-    position: fixed;
+h1{
+    font-size: 150%;
+    color: white;
+    padding: 25px;
+}
+
+h1.about{
+    margin-top: 50px;
+    padding: 50px;
+}
+
+h3.about{
+    margin-bottom: 50px;
+}
+
+h3{
+    font-size: 120%;
+    color: white;
+    padding: 15px;
+}
+
+#nav {
+    position: relative;
+    float: left;
 }
 
 #nav li{
     list-style: none;
     display: inline-block;
-    margin: 20px;
 }
 
 #nav li a{
     color: white;
     text-decoration: none;
     font-size: 16px;
+    padding: 15px;
 }
 
-section{
-    width: 100%;
-    height: 100vh;
-}
 
 #home{
     background-color: #bc6c29;
+    position: relative;
+    padding: 100px 100px;
+}
+
+img{
+    width: 300px;
+    height: 300px;
+    border-radius: 5px;
+    padding: 100px 100px;
 }
 
 #about{
     background-color: #9ab5dc;
+    position: relative;
+    padding: 100px 100px;
 }
 
 #projects{
     background-color: #29505b;
-    height: 1000px;
+    position: relative;
+    padding: 100px 100px;
 }
 
-h1{
-    position: relative;
-    left: 30%;
-    top: 25%;
-    color: #fff;
-}
-
-h3{
-    position: relative;
-    top: 25%;
-    padding: 50px 250px;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 550;
-    line-height: 24px;
-    font-family: sans-serif;
-}
-
-
-img{
-    position: relative;
-    top: 20%;
-    left: 30%;
-    width: 300px;
-    height: 300px;
-    border-radius: 5px;
-}
-
-img.marble{
-    position: relative;
-    top: 30%;
-    left: 20%;
-    width: 120px;
-    height: 150px;
-    border-radius: 0px;
+.marble{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    margin-top: 15px;
 }
 
 h3.marble{
-    top: 7%;
-    left: 0%;
-    padding: 50px 400px;
-}
-
-p{
     position: relative;
-    top: 20%;
-    left: 5%;
-    padding: 50px 400px;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 550;
-    line-height: 24px;
-    font-family: sans-serif;
+    padding: 10px;
+    margin: 2px;
 }
 
 p.marble{
-    top: 0%;
-    left: 0%;
-    font-size: 14px;
-    font-weight: 550;
+    padding: 20px;
     line-height: 20px;
 }
 
-h1.projects{
-    top: 20%;
+img.marble{
+    width: 150px;
+    height: 150px;
+    padding: 25px 25px;
 }
+
+.imageprocessor{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    margin-top: 15px;
+}
+
+h3.imageprocessor{
+    position: relative;
+    padding: 10px;
+    margin: 2px;
+}
+
+p.imageprocessor{
+    padding: 20px;
+    line-height: 20px;
+}
+
+img.imageprocessor{
+    width: 250px;
+    height: 195px;
+    padding: 25px 25px;
+}
+
+.hospital{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    margin-top: 15px;
+}
+
+h3.hospital{
+    position: relative;
+    padding: 10px;
+    margin: 2px;
+}
+
+p.hospital{
+    padding: 20px;
+    line-height: 20px;
+}
+
+img.hospital{
+    width: 300px;
+    height: 162px;
+    padding: 25px 25px;
+}
+
+.floodit{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    margin-top: 15px;
+}
+
+h3.floodit{
+    position: relative;
+    padding: 10px;
+    margin: 2px;
+}
+
+p.floodit{
+    padding: 20px;
+    line-height: 20px;
+}
+
+img.floodit{
+    width: 200px;
+    height: 200px;
+    padding: 25px 25px;
+}
+
+.messageboard{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    margin-top: 15px;
+}
+
+h3.messageboard{
+    position: relative;
+    padding: 10px;
+    margin: 2px;
+}
+
+p.messageboard{
+    padding: 20px;
+    line-height: 20px;
+}
+
+img.messageboard{
+    width: 300px;
+    height: 152px;
+    padding: 25px 25px;
+}
+
+h3.des{
+    margin-top: 30px;
+}
+
+
